# CALINS

./: .gitlab-ci.yml  CNAME  LICENSE  README.md  README_FR.md  USER_EXAMPLES.ipynb  mkdocs.yml  pyproject.toml  requirements.txt  version_scheme.py
.github/workflows/: ci.yml  deploy-docs.yml  update-version.yml
calins/: __init__.py
calins/src/: __init__.py  classes.py  errors.py  logs.py  methods.py  plots.py  version.py
calins/src/html_outputfile/: html.model
calins/src/isotopes_reactions/: iso_id.json  reac_id.json
docs/: citation.md  contributing.md  index.md  installation.md  license.md  points-of-attention.md  references.md  troubleshooting.md
docs/developer-manual/: classes.md  errors.md  logs.md  methods.md  plots.md
docs/images/: Image_maker.pptx
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
docs/theory/: alignment-rule.md  assimilation-gllsm.md  covariance-matrix.md  experimental-correlations.md  introduction.md  sensitivity-vector.md  uncertainty-calculation.md  validation-methods.md
docs/usage-examples/: calculating-uncertainty.md  computing-similarity-indices.md  creating-case-object.md  loading-covariance-data.md  performing-data-assimilation.md  sensitivity-analysis-case-screening.md
git-hooks/: README.md  pre-commit  pre-push  setup-hooks.ps1  setup-hooks.sh
images/: Image_maker.pptx
tests/: test_unit.py  test_unitaires.py
tests/test_inputs/: cov_correct_1.txt  cov_proper_1.txt  sensi_correct_1.sdf  sensi_correct_2.sdf  sensi_correct_3.sdf  sensi_correct_4.sdf  sensi_corrompu_1.sdf  sensi_corrupted_1.sdf  sensi_proper_1.sdf  sensi_proper_2.sdf  sensi_proper_3.sdf  sensi_proper_4.sdf
tests/test_inputs/cov_correct_2_comac/: cov_Am241  cov_Fe56
tests/test_inputs/cov_corrompu_2_comac/: cov_Am241  cov_Fe56
tests/test_inputs/cov_corrupted_2_comac/: cov_Am241  cov_Fe56
tests/test_inputs/cov_proper_2_comac/: cov_Am241  cov_Fe56
